--- a/html/detail.html
+++ b/html/detail.html
@@ -107,7 +107,7 @@
                         <nav id="nav">
                             <!-- <a href="index.html" class="current-page-item">主页</a> -->
                             <!-- <a href="twocolumn1.html">新闻</a> -->
-                            <a href="#" id="search_history">查询历史</a>
+                            <a href="./history.html" id="search_history">查询历史</a>
                             <!--<a href="threecolumn.html">关于</a>-->
                             <a href="./login/login.html"  id="user_operation" onclick="user_operate(event)">登录</a>
                             <a href="#" id="user_info"></a>
