--- a/html/history.html
+++ b/html/history.html
@@ -148,7 +148,7 @@
                         <nav id="nav">
                             <!-- <a href="index.html" class="current-page-item">主页</a> -->
                             <!-- <a href="twocolumn1.html">新闻</a> -->
-                            <a href="#" id="search_history">查询历史</a>
+                            <a href="./history.html" id="search_history">查询历史</a>
                             <!--<a href="threecolumn.html">关于</a>-->
                             <a href="./login/login.html" id="user_operation" onclick="user_operate(event)">登录</a>
                             <a href="#" id="user_info"></a>
@@ -170,16 +170,13 @@
                             <table class="gridtable" id="result_form">
                                 <tr>
                                     <th>车牌号</th>
-                                    <!--<th>车架号</th>-->
+                                    <th>车架号</th>
                                     <th>查询时间</th>
                                     <th>操作</th>
                                 </tr>
 
                             </table>
                         </div>
-                        <!--<p>This is the second generic interior page. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ante ante, viverra a ornare sed, convallis sed est. Proin felis sapien, adipiscing quis eleifend vel, sodales vitae sapien. Donec vel lacus leo, eu convallis metus. Cras egestas feugiat tortor, vitae interdum augue aliquam a. Sed nec augue id orci egestas commodo in eget magna. Nunc eleifend diam non odio laoreet placerat gravida nulla bibendum. Phasellus tempus imperdiet suscipit.</p>-->
-                        <!--<p>Mauris risus nulla, pulvinar vitae sagittis a, pharetra nec tellus. Suspendisse varius enim ac felis mattis aliquam. Aenean et justo quis ipsum gravida lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia bibendum cursus. Nullam nec pellentesque lacus. In porta erat in tortor rhoncus quis accumsan magna pretium. Nulla posuere magna eget mauris lacinia in mollis sem fermentum. Donec mollis adipiscing mauris, ut posuere enim rhoncus ut. Nunc commodo vestibulum orci vel placerat. Cras sed risus libero. Donec ac lacus vitae lectus mattis commodo id vitae libero. Etiam lorem odio, volutpat nec pulvinar sit amet, tincidunt ut lacus. Pellentesque consequat arcu vel nisi lobortis in pellentesque orci sollicitudin. Cras gravida lacus turpis, consectetur porttitor lectus. Cras malesuada tortor id neque porta ut semper quam iaculis.</p>-->
-                        <!--<p>Nulla ut tortor quam, a luctus nunc. Nulla condimentum diam porttitor arcu placerat tincidunt. Nunc non augue ipsum. Nulla facilisi. Phasellus feugiat augue in ipsum egestas semper. Suspendisse blandit, nisl ullamcorper blandit sollicitudin, sem leo auctor lectus, et volutpat mauris elit et odio. Ut elementum risus in metus mollis tristique vulputate nulla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae orci dui, ut facilisis dui.</p>-->
                     </section>
 
                 </div>
@@ -202,7 +199,6 @@
                                         <li><a href="http://www.mps.gov.cn/n16/n85753/">公安部交通管理局</a></li>
                                         <li><a href="http://www.tmri.cn/">公安部交通管理科学研究所</a></li>
                                         <li><a href="http://www.122.cn/">交通安全宣传网</a></li>
-                                        <!--<li><a href="#">Eget et amet consequat</a></li>-->
                                     </ul>
                                 </div>
                                 <div class="6u 12u(mobile)">
@@ -257,12 +253,13 @@
 
 <script>
 
-    // todo 未登录提示错误信息
+    // 未登录提示错误信息
     function user_error() {
-
+        $('#result_form').parent().append('<h1>无效操作 <a href="./index.html">返回主页</a></h1>');
+        $('#result_form').remove();
     }
 
-    // todo 已登录 ajax 查询历史查询表
+    // 已登录 ajax 查询历史查询表
     function query_history() {
         if (getCookie('userOnline')) { // 获取 cookie.userOnline
             var user = getCookie('userOnline');
@@ -278,20 +275,20 @@
 
                     for (var i in data.history) {
 
+                        // 添加车架号
                         var $row = $('\
                         <tr>\
                             <td>' + data.history[i].car_id + '</td>\
+                            <td>' + data.history[i].vin + '</td>\
                             <td>' + data.history[i].time + '</td>\
                             <td>\
-                                <button>查看详情</button>\
+                                <button  data-vin="' + data.history[i].vin + '" data-car="' + data.history[i].car_id + '" onclick="to_result()">查看详情</button>\
                             </td>\
                         </tr>\
                     ');
 
                         $('#result_form').append($row);
                     }
-
-
                 },
                 error: function (data) {
                     console.log(data)
@@ -304,9 +301,43 @@
     }
 
 
+    function to_result(){
+        // todo-1 点击查看详情跳转页面
+        var id='闽a0001';
+        var vin;
+
+        $.ajax({
+            url: 'http://localhost/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
+            type: 'get',
+            dataType: 'json',
+            success: function (data) {
+                console.log(data);
+                localStorage.data = JSON.stringify(data);
+
+                if (data['isConfirm']) {
+//                    跳转至查询结果页
+                    localStorage.data = JSON.stringify(data);
+                    location.href = "./result.html"
+                } else {
+//                     返回主页
+                    localStorage.link = JSON.stringify('../index.html');
+                    localStorage.link_info = JSON.stringify(data['info']); // 接受服务器发送错误信息
+                    location.href = "./login/goto.html";
+                }
+            },
+            error: function (data) {
+                console.log(data);
+                document.body.innerHTML += data.responseText;
+            }
+        });
+    }
+
+
+
     $(function () {
         user_online(); //  检查用户是否登录
         query_history();
+
 
 
     });
