--- a/html/complaint.html
+++ b/html/complaint.html
@@ -235,6 +235,9 @@
 <script src="assets/js/log.js"></script>
 <script>
 
+    // todo-1 申诉要填写身份证号和真实姓名
+
+
     // 读取 case_id
     function read_id() {
         var $table = $("#complaint_table");
@@ -289,7 +292,6 @@
                 console.log(data)
             }
         });
-
     }
 
     $(function () {
