--- a/html/history.html
+++ b/html/history.html
@@ -302,7 +302,7 @@
 
 
     function to_result(evt){
-        // todo-1 点击查看详情跳转页面
+        // 点击查看详情跳转页面
         var id=$(evt.target).parent().parent().children('td:eq(0)').text();
         var vin; // todo-7 用车架号验证
 
