--- a/html/complaint.html
+++ b/html/complaint.html
@@ -109,7 +109,7 @@
                             <!-- <a href="twocolumn1.html">新闻</a> -->
                             <a href="./history.html" id="search_history">查询历史</a>
                             <!--<a href="threecolumn.html">关于</a>-->
-                            <a href="./login/login.html"  id="user_operation" onclick="user_operate(event)">登录</a>
+                            <a href="./login/login.html" id="user_operation" onclick="user_operate(event)">登录</a>
                             <a href="#" id="user_info"></a>
                         </nav>
                     </header>
@@ -253,16 +253,39 @@
         // todo-5 删除case_id
     }
 
-    // todo-3 读取数据
-    function read_data(){
+    // todo-1 读取数据
+    function read_data() {
+
+
+        var data = JSON.parse(localStorage.data);
+        var case_id = JSON.parse(localStorage.case_id);
+        // todo-1 获取case-id
+        // 根据 case_id 寻找对应数据
+        for (var i in data.result) {
+            if (data.result[i]['id'] == case_id) {
+                var result = data.result[i];
+//                localStorage.removeItem('case_id'); // 删除 localstorage.case_id 避免无效操作
+                break;
+            }
+        }
+        console.log(result);
+
+
+        $("#id").text(case_id);
+        $("#place").text(result.place);
+        $("#happentime").text(result.happentime);
 
     }
 
     // 提交申述表单
     function form_submit() {
         var content = $("#content").children().val();
-        var case_id = $('#deal').children('button').attr('data_case_id');
-//        var case_id = '123aa';
+        var case_id = $('#deal').children('button').attr('data-case_id');
+
+        if (!case_id) {
+            case_id = localStorage.case_id
+        }
+        case_id=1;
 
         console.log(case_id);
 
@@ -271,25 +294,27 @@
             url: 'http://localhost/project_4/weixin/index/complaint/1.json',
             type: 'post',
             dataType: 'json',
-            data:{
-                content:content,
-                case_id:case_id
+            data: {
+                content: content,
+                case_id: case_id
             },
             success: function (data) {
                 // 跳转页面
-                if(data['isConfirm']){
+                if (data['isConfirm']) {
                     console.log(data.info);
                     localStorage.link = JSON.stringify('../result.html');
                     localStorage.link_info = JSON.stringify('申诉成功'); // 接受服务器发送错误信息
                     location.href = "./login/goto.html"
-                }else{
+                } else {
                     localStorage.link = JSON.stringify('../complaint.html');
                     localStorage.link_info = JSON.stringify(data['info']); // 接受服务器发送错误信息
                     location.href = "./login/goto.html"
                 }
             },
             error: function (data) {
-                console.log(data)
+                console.log(data);
+                document.body.innerHTML += data.responseText;
+
             }
         });
     }
@@ -297,6 +322,7 @@
     $(function () {
         user_online();
 
+        read_data();
         read_id()
     })
 </script>
