--- a/html/detail.html
+++ b/html/detail.html
@@ -194,6 +194,10 @@
                                     <td id="punish_date"></td>
                                 </tr>
                                 <tr>
+                                    <th>相关证据</th>
+                                    <td id="evidence"></td>
+                                </tr>
+                                <tr>
                                     <th>处理状态</th>
                                     <td id="state"></td>
                                 </tr>
@@ -265,7 +269,8 @@
             </div>
         </div>
     </div>
-    <div id="payment" style="display: none;position: fixed;width: 50vmin;height: 50vmin; border: solid 1px black;top:25vmin;left:25vmin;background: white;text-align: center">
+    <div id="payment"
+         style="display: none;position: fixed;width: 50vmin;height: 50vmin; border: solid 1px black;top:25vmin;left:25vmin;background: white;text-align: center">
         <img style="width: 80%;height: 80%" src="images/qr.png"/>
         <br>
         <span><a href="#" onclick="to_pay()">支付宝账号登陆</a></span>
@@ -286,7 +291,7 @@
 <script src="assets/js/main.js"></script>
 <script src="assets/js/log.js"></script>
 <script>
-    function open_pay(){
+    function open_pay() {
         $('#payment').show();
     }
 
@@ -349,16 +354,66 @@
     }
 
 
-    // todo-1 显示证据
+    // todo-获取证据
+    function get_evidence(case_id) {
+
+        // todo-11 获取证据
+        $.ajax({
+            url: 'http://localhost/project_4/weixin/index/evidence/1.json',
+            type: 'get',
+            dataType: 'json',
+            data: {
+                case_id: case_id
+            },
+            success: function (data) {
+                console.log(data.rs);
+                var result = data.rs;
+                var row;
+
+                for (var i in result) {
+                    console.log(result[i]);
+
+                    if (result[i]['type'] == 'jpg') {
+
+                        $row = "<img style='max-height: 200px;' src='../" + result[i]['url'] + "' / >";
+
+                    } else if (result[i]['type'] == 'mp3') {
+
+                        $row = "<audio  src='../" + result[i]['url'] + "' controls='controls'></audio>";
+
+                    } else if (result[i]['type'] == 'mp4') {
+
+                        $row = "<video style='max-height: 400px;' src='../" + result[i]['url'] + "' controls='controls'></video>";
+
+                    }
+
+                    $('#evidence').append($row);
+
+                }
+
+
+            },
+            error: function (data) {
+                console.log(data);
+                document.body.innerHTML += data.responseText;
+            }
+        });
+    }
+
     // 读取数据
     function read_data() {
         if (!localStorage.case_id) {
             return null
         }
+
         // 读取数据
         var data = JSON.parse(localStorage.data);
         var case_id = JSON.parse(localStorage.case_id);
         console.log(data);
+
+
+        // todo-1 显示证据
+        var evidence = get_evidence(case_id);
 
 
         // 根据 case_id 寻找对应数据
@@ -396,8 +451,6 @@
         localStorage.case_id = $(evt.target).parent().attr('data-case_id');
         location.href = './complaint.html'
     }
-
-
 
 
     // 根据处理状态调整申诉按钮
