--- a/html/detail.html
+++ b/html/detail.html
@@ -103,7 +103,7 @@
             <div class="row">
                 <div class="12u">
                     <header id="header">
-                        <h1><a href="#" id="logo">交通安全综合服务管理平台</a></h1>
+                        <h1><a href="./index.html" id="logo">交通安全综合服务管理平台</a></h1>
                         <nav id="nav">
                             <!-- <a href="index.html" class="current-page-item">主页</a> -->
                             <!-- <a href="twocolumn1.html">新闻</a> -->
@@ -150,6 +150,16 @@
                                 <tr>
                                     <th>处罚事实</th>
                                     <td id="detail">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>驾驶人</th>
+                                    <td id="people">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>行驶证号</th>
+                                    <td id="road_number">
                                     </td>
                                 </tr>
                                 <tr>
@@ -205,7 +215,7 @@
                                     <th>违章处理</th>
                                     <td id="deal">
                                         <button id="button_com" onclick="case_complaint(event)">申诉</button>
-                                        <button onclick="open_pay()">缴交罚款</button>
+                                        <button id="button_pay" onclick="open_pay()">缴交罚款</button>
                                     </td>
                                 </tr>
                             </table>
@@ -299,10 +309,18 @@
     // todo-1 动态支付界面
     function to_pay() {
         window.open("./支付宝%20-%20网上支付%20安全快速！.html");
+        // todo 获取罚款金额
+        // todo 存入local
+
+        // todo 点击已支付
+        // todo 修改为已处理状态
+
+        // todo 点击支付宝跳转页面
+        // todo 在支付页面读取罚款金额
     }
 
 
-    // todo-1 修改状态 已处理
+    // todo-1 支付后修改状态 已处理
     function pay_done(evt) {
         $(evt.target).parent().hide();
         var case_id = $('#id').text();
@@ -354,10 +372,10 @@
     }
 
 
-    // todo-获取证据
+    // 获取证据
     function get_evidence(case_id) {
 
-        // todo-11 获取证据
+        // 获取证据
         $.ajax({
             url: 'http://localhost/project_4/weixin/index/evidence/1.json',
             type: 'get',
@@ -387,11 +405,8 @@
 
                     }
 
-                    $('#evidence').append($row);
-
+                    $('#evidence').append($row).append('<br/>');
                 }
-
-
             },
             error: function (data) {
                 console.log(data);
@@ -412,8 +427,8 @@
         console.log(data);
 
 
-        // todo-1 显示证据
-        var evidence = get_evidence(case_id);
+        // 显示证据
+        get_evidence(case_id);
 
 
         // 根据 case_id 寻找对应数据
@@ -455,8 +470,9 @@
 
     // 根据处理状态调整申诉按钮
     function complaint_button() {
-        if ($("#state").text() == '申诉') {
+        if ($("#state").text() != '未处理') {
             $('#button_com').hide();
+            $('#button_pay').hide().parent().append('<span>暂无可用操作</span>');
         }
     }
 
