--- a/html/history.html
+++ b/html/history.html
@@ -144,7 +144,7 @@
             <div class="row">
                 <div class="12u">
                     <header id="header">
-                        <h1><a href="#" id="logo">交通安全综合服务管理平台</a></h1>
+                        <h1><a href="./index.html" id="logo">交通安全综合服务管理平台</a></h1>
                         <nav id="nav">
                             <!-- <a href="index.html" class="current-page-item">主页</a> -->
                             <!-- <a href="twocolumn1.html">新闻</a> -->
@@ -301,9 +301,9 @@
     }
 
 
-    function to_result(evt){
-        // 点击查看详情跳转页面
-        var id=$(evt.target).parent().parent().children('td:eq(0)').text();
+    // 点击查看详情跳转页面
+    function to_result(evt) {
+        var id = $(evt.target).parent().parent().children('td:eq(0)').text();
         var vin; // todo-7 用车架号验证
 
         $.ajax({
@@ -333,11 +333,9 @@
     }
 
 
-
     $(function () {
         user_online(); //  检查用户是否登录
         query_history();
-
 
 
     });
