--- a/html/index.html
+++ b/html/index.html
@@ -130,7 +130,7 @@
                                                 <input type="text" name="captcha" id="captcha"
                                                        placeholder="输入验证码"/>
                                                 <div style="width:40%;display: inline-block;vertical-align: middle;padding: 0;margin: 0;">
-                                                    <img width="100%" src="http://localhost/project_4/weixin/index/captcha_get_png"
+                                                    <img width="100%" src="http://101.201.233.0/project_4/weixin/index/captcha_get_png"
                                                          onclick="this.src = this.src +'?'+ Math.random()"/>
                                                 </div>
                                             </li>
@@ -239,7 +239,7 @@
 //         跳转结果页面
         if ($form.valid()) {
             $.ajax({
-                url: 'http://localhost/project_4/weixin/index/carInfo/id/' + id + '/vin/' + vin + '/type/' + type + '/captcha/' + captcha + '/user/' + user + '/1.json',
+                url: 'http://101.201.233.0/project_4/weixin/index/carInfo/id/' + id + '/vin/' + vin + '/type/' + type + '/captcha/' + captcha + '/user/' + user + '/1.json',
                 type: 'get',
                 dataType: 'json',
                 success: function (data) {
@@ -293,7 +293,7 @@
     // 测试
     function test() {
         $.ajax({
-            url: 'http://localhost/project_4/weixin/index/test',
+            url: 'http://101.201.233.0/project_4/weixin/index/test',
             type: 'get',
             dataType: 'json',
             success: function (data) {
