--- a/html/login/index.html
+++ b/html/login/index.html
@@ -45,6 +45,12 @@
             <div class="field">
                 <input type="text" name="id_number" id="id_number" placeholder="请输入身份证号"/>
             </div>
+            <!--<div class="field">-->
+                <!--<input type="text" name="id_number" id="drive_number" placeholder="请输入驾驶证号"/>-->
+            <!--</div>-->
+            <div class="field">
+                <input type="text"  placeholder="请输入真实姓名"/>
+            </div>
             <div class="field">
                 <input type="text" name="captcha" id="captcha" placeholder="请输入验证码"
                        style="width:55%;display: inline-block"/>
@@ -107,7 +113,7 @@
 
         if ($form.valid()) {
             $.ajax({
-                url: "http://localhost/project_4/weixin/index/userData/confirm.json",
+                url: "http://101.201.233.0/project_4/weixin/index/userData/confirm.json",
                 type: 'post',
                 data: {
                     phone: phone,
@@ -121,7 +127,9 @@
                     console.log(data);
 //                    跳转至主页
 //                    todo 提示
-                    location.href = "./login.html"
+                    localStorage.link = JSON.stringify('./login.html');
+                    localStorage.link_info = JSON.stringify('注册成功'); // 接受服务器发送错误信息
+                    location.href = "./goto.html";
                 },
                 error: function (data) {
                     console.log(data);
@@ -158,7 +166,7 @@
                     minlength: 11,
                     maxlength: 11,
                     remote: {
-                        url: "http://localhost/project_4/weixin/index/userExist/phone/" + $("#phone").val() + ".json",
+                        url: "http://101.201.233.0/project_4/weixin/index/userExist/phone/" + $("#phone").val() + ".json",
                         type: "get",
                         dataType: "json",
                         dataFilter: function (data) {
