html | 驾驶证记分查询表单 | 表单提交

--- a/html/detail.html
+++ b/html/detail.html
@@ -331,7 +331,7 @@
 
         // todo-1 已处理
         $.ajax({
-            url: 'http://101.201.233.0/project_4/weixin/index/carInfo/1.json',
+            url: 'http://localhost/project_4/weixin/index/carInfo/1.json',
             type: 'put',
             data: {
                 case_id: case_id
@@ -381,7 +381,7 @@
 
         // 获取证据
         $.ajax({
-            url: 'http://101.201.233.0/project_4/weixin/index/evidence/1.json',
+            url: 'http://localhost/project_4/weixin/index/evidence/1.json',
             type: 'get',
             dataType: 'json',
             data: {
