--- a/html/login/index.html
+++ b/html/login/index.html
@@ -113,7 +113,7 @@
 
         if ($form.valid()) {
             $.ajax({
-                url: "http://101.201.233.0/project_4/weixin/index/userData/confirm.json",
+                url: "http://localhost/project_4/weixin/index/userData/confirm.json",
                 type: 'post',
                 data: {
                     phone: phone,
@@ -166,7 +166,7 @@
                     minlength: 11,
                     maxlength: 11,
                     remote: {
-                        url: "http://101.201.233.0/project_4/weixin/index/userExist/phone/" + $("#phone").val() + ".json",
+                        url: "http://localhost/project_4/weixin/index/userExist/phone/" + $("#phone").val() + ".json",
                         type: "get",
                         dataType: "json",
                         dataFilter: function (data) {
