--- a/html/history.html
+++ b/html/history.html
@@ -53,11 +53,12 @@
         button {
             border: none;
             /* background: #c0392b; */
-            background: #5c5fdc;
+            background: #007b9d;
             color: #fff;
             cursor: pointer;
             display: inline-block;
             margin: 3px 2px;
+            padding: 2px;
             border-radius: 2px;
         }
 
@@ -332,11 +333,22 @@
         });
     }
 
+    // 无车辆查询历史时
+    function none_history(){
+        var $form = $('#result_form');
+        console.log($form.children('tr'));
+        if($form.children('tr').length == 1){
+            $form.children().remove();
+            $form.append('<h1>暂无车辆查询记录 <a href="./index.html">返回主页</a></h1>')
+        }
+    }
+
 
     $(function () {
         user_online(); //  检查用户是否登录
         query_history();
 
+        none_history()
 
     });
 </script>
