--- a/html/result.html
+++ b/html/result.html
@@ -53,11 +53,12 @@
         button {
             border: none;
             /* background: #c0392b; */
-            background: #5c5fdc;
+            background: #007b9d;
             color: #fff;
             cursor: pointer;
             display: inline-block;
             margin: 3px 2px;
+            padding: 2px;
             border-radius: 2px;
         }
 
