--- a/html/detail.html
+++ b/html/detail.html
@@ -338,7 +338,7 @@
 
         // todo-1 已处理
         $.ajax({
-            url: 'http://localhost/project_4/weixin/index/payDone/1.json',
+            url: 'http://101.201.233.0/project_4/weixin/index/payDone/1.json',
             type: 'put',
             data: {
                 case_id: case_id
@@ -372,7 +372,7 @@
         var vin;
 
         $.ajax({
-            url: 'http://localhost/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
+            url: 'http://101.201.233.0/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
             type: 'get',
             dataType: 'json',
             success: function (data) {
@@ -418,7 +418,7 @@
 
         // 获取证据
         $.ajax({
-            url: 'http://localhost/project_4/weixin/index/evidence/1.json',
+            url: 'http://101.201.233.0/project_4/weixin/index/evidence/1.json',
             type: 'get',
             dataType: 'json',
             data: {
