--- a/html/支付宝 - 网上支付 安全快速！.html
+++ b/html/支付宝 - 网上支付 安全快速！.html
@@ -612,7 +612,7 @@
 
             // todo-1 “—¥¶¿Ì
             $.ajax({
-                url: 'http://localhost/project_4/weixin/index/payDone/1.json',
+                url: 'http://101.201.233.0/project_4/weixin/index/payDone/1.json',
                 type: 'put',
                 data: {
                     case_id: case_id
@@ -645,7 +645,7 @@
             var vin;
 
             $.ajax({
-                url: 'http://localhost/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
+                url: 'http://101.201.233.0/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
                 type: 'get',
                 dataType: 'json',
                 success: function (data) {
