--- a/html/complaint.html
+++ b/html/complaint.html
@@ -296,7 +296,7 @@
 
 
         $.ajax({
-            url: 'http://localhost/project_4/weixin/index/complaint/1.json',
+            url: 'http://101.201.233.0/project_4/weixin/index/complaint/1.json',
             type: 'post',
             dataType: 'json',
             data: {
@@ -334,7 +334,7 @@
         var vin; // todo-7 用车架号验证
 
         $.ajax({
-            url: 'http://localhost/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
+            url: 'http://101.201.233.0/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
             type: 'get',
             dataType: 'json',
             success: function (data) {
