--- a/html/history.html
+++ b/html/history.html
@@ -265,7 +265,7 @@
         if (getCookie('userOnline')) { // 获取 cookie.userOnline
             var user = getCookie('userOnline');
             $.ajax({
-                url: 'http://localhost/project_4/weixin/index/searchHistory/1.json',
+                url: 'http://101.201.233.0/project_4/weixin/index/searchHistory/1.json',
                 type: 'get',
                 dataType: 'json',
                 data: {
@@ -308,7 +308,7 @@
         var vin; // todo-7 用车架号验证
 
         $.ajax({
-            url: 'http://localhost/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
+            url: 'http://101.201.233.0/project_4/weixin/index/historyInfo/id/' + id + '/vin/' + vin + '/1.json',
             type: 'get',
             dataType: 'json',
             success: function (data) {
